# energy-carbon-footprint-optimizer

./: .gitignore  CLAUDE.md  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements.txt
shared/science-industry/: README.md  manifest.json
skills/: main.md  shared-cluster-sub-skills.md  sub-compliance-check.md  sub-evaluation-framework-selector.md  sub-improvement-roadmap.md  sub-scoring-engine.md
src/energy_carbon_footprint_optimizer/: __init__.py  cli.py  compliance_check.py  constants.py  framework_selector.py  harness.py  improvement_roadmap.py  knowledge_brain.py  models.py  scoring_engine.py
tests/: test-scenarios.md  test_knowledge_updater.py  test_scenarios.py
tools/: knowledge_updater.py
